<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UH REST Test</string>
    <string name="app_admin">enforce security policies on your device</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
	<string name="search_hint">Search tenants and properties</string>
    <string name="hello_world">Welcome to the Blackwood Business Solutions UH REST API test suite</string>
	<string name="con_status_label">Connection Status:</string>
	<string name="con_status">Preparing&#8230;</string>
	<string name="url_spin_prompt">Select a URL to fetch</string>
	<string name="auth_label">Blackwood Business Solutions</string>
	<string name="base_url">http://192.168.121.176:3000/api</string>
	<string-array name="test_urls">
	    <item>http://192.168.121.176:3000/api</item>
	    <item>http://192.168.121.176:3000/housing/officers</item>
	    <item>http://192.168.121.176:3000/housing/schemes</item>
	    <item>http://192.168.121.176:3000/housing/tenants/scheme/ABBCTEH</item>
	    <item>http://192.168.121.176:3000/housing/tenants/officer/AD2</item>
	</string-array>
	
	<!-- Field labels for tenant information activities -->
	<string name="tenant_main_activity_title">Tenant Details</string>
	<string name="tenant_comms_activity_title">Comms Preferences</string>
	<string name="tenant_household_activity_title">Household</string>
	<string name="tenant_repairs_activity_title">Repairs Requests</string>
	<string name="tenant_rent_activity_title">Rent</string>
	<!--  Tenant Basic Fragment -->
	<string name="tenant_title">Title</string>
	<string name="tenant_forename">Forename</string>
	<string name="tenant_surname">Surname</string>
	<string name="tenant_houseno">House Number</string>
	<string name="tenant_postcode">Postcode</string>
	<string name="tenant_houseref">Household Reference</string>
	<string name="tenant_agreeref">Agreement Reference</string>
	<string name="tenant_propref">Property Reference</string>
	<string name="tenant_dob">Date of Birth</string>
	<string name="tenant_nino">National Insurance Number</string>
	<string name="tenant_landphones">Landline Phone Numbers</string>
	<string name="tenant_mobilephones">Mobile Phone Numbers</string>
	<string name="tenant_emails">Email Addresses</string>
	<!-- Tenant Comms Fragment -->
	<string name="tenant_commstype">Type</string>
	<string name="tenant_commsvalue">Value</string>
	<string name="tenant_commsdesc">Description</string>
	<string name="tenant_commsname">Name</string>
	<!-- Tenant Household Fragment -->
	<string name="tenant_hh_fullname">Name</string>
	<string name="tenant_hh_title">Title</string>
	<string name="tenant_hh_forename">Forename</string>
	<string name="tenant_hh_surname">Surname</string>
	<string name="tenant_hh_relation">Relationship</string>
	<string name="tenant_hh_dob">Date of Birth</string>
	<string name="tenant_hh_nino">National Insurance Number</string>
	<!-- Tenant Repairs Fragment -->
	<string name="tenant_repairs_rq_date">Date Requested</string>
	<string name="tenant_repairs_rq_name">Person Requesting</string>
	<string name="tenant_repairs_rq_problem">Description of Problem</string>
	<string name="tenant_repairs_rq_status">Current Status</string>
	<string name="tenant_repairs_rq_status_date">Date of Status</string>
	<string name="tenant_repairs_rq_due_date">Date Due</string>

</resources>
