<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/tntHouseholdHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grid_back" >

        <TextView
            android:id="@+id/tvHHHeadName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".45"
            android:text="@string/tenant_hh_fullname"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvHHHeadRelation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/tenant_hh_relation"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvHHHeadDob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:text="@string/tenant_hh_dob"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvHHHeadNino"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:text="@string/tenant_hh_nino"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <ListView
        android:id="@id/android:list"
        style="@style/AppBaseTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true" >
    </ListView>

</LinearLayout>
